[FEATURE] Added auth

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=ReposDb;Username=postgres;Password=admin"
+  },
+  "Jwt": {
+    "Key": "",
+    "Issuer": "",
+    "Audience": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
