--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,16 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=ReposDb;Username=postgres;Password=admin"
   },
+  "Redis": {
+    "Connection": "localhost:6379"
+  },
+  "RabbitMQ": {
+    "Host": "localhost"
+  },
+  "RateLimitConfig": {
+    "RateWindowsMinutes": "2",
+    "MaxRequestsPerMinute": "20"
+  },
   "Jwt": {
     "Key": "",
     "Issuer": "",
