--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=ReposDb;Username=postgres;Password=admin"
+    "Postgres": ""
   },
   "Redis": {
     "Connection": "localhost:6379"
